更换已弃用方法，更新依赖